--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Visualize TypeScript request body types in VSCode",
   "version": "0.1.0",
   "publisher": "Ayumu3746221",
+  "icon": "images/icon.png",
   "author": {
     "name": "ayumu"
   },
